fix: fix dockerfile

--- a/lab3/Dockerfile
+++ b/lab3/Dockerfile
@@ -8,12 +8,8 @@ WORKDIR /app
 # Copy project files
 COPY . /app
 
-# Use virtual env
 # Install python libs
 RUN pip install -r requirements.txt
 
-# Prepare model
-RUN python src/model.py
-
-# Run application
-CMD uvicorn src.main:app --host 0.0.0.0 --port 8000
+# Prepare model and run application
+CMD python src/model.py && uvicorn src.main:app --host 0.0.0.0 --port 8000
