--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ atpublic==4.1.0
 attrs==23.2.0
 billiard==4.2.0
 bleach==6.1.0
+cachetools==5.3.3
 celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -30,6 +31,7 @@ dpath==2.1.6
 dulwich==0.22.1
 dvc==3.50.0
 dvc-data==3.15.1
+dvc-gdrive==3.0.1
 dvc-http==2.32.0
 dvc-objects==5.1.0
 dvc-render==1.0.2
@@ -46,9 +48,15 @@ fsspec==2024.3.1
 funcy==2.0
 gitdb==4.0.11
 GitPython==3.1.43
+google-api-core==2.18.0
+google-api-python-client==2.127.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.63.0
 grandalf==0.8
 gto==1.7.1
 h11==0.14.0
+httplib2==0.22.0
 httptools==0.6.1
 hydra-core==1.3.2
 idna==3.6
@@ -61,6 +69,7 @@ mdurl==0.1.2
 multidict==6.0.5
 networkx==3.2.1
 numpy==1.26.4
+oauth2client==4.1.3
 omegaconf==2.3.0
 orjson==3.10.1
 packaging==24.0
@@ -68,14 +77,20 @@ pandas==2.2.1
 pathspec==0.12.1
 platformdirs==3.11.0
 prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.3
 psutil==5.9.8
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
 pydot==2.0.0
+PyDrive2==1.19.0
 pygit2==1.14.1
 Pygments==2.17.2
 pygtrie==2.5.0
+pyOpenSSL==24.1.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -84,6 +99,7 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.1
+rsa==4.9
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
 scikit-learn==1.4.1.post1
@@ -106,6 +122,7 @@ tqdm==4.66.2
 typer==0.12.3
 typing_extensions==4.11.0
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
